fix distorted cart

--- a/css/home.css
+++ b/css/home.css
@@ -148,70 +148,13 @@
     top: 23px;
     right: 30px;
     z-index: 10;
-    width: 25vw;
-    height: 40vh;
+    width: 350px;
+    height: 250px;
     background-color: white;
     box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     /* hidden by default */
     display: none;
-}
-
-/* Modify cart when the screen is less than 610px */
-@media screen and (max-width: 1300px) {
-    .infor .cart .cart-products {
-        width: 34vw;
-        height: 36vh;
-    }
-}
-
-@media screen and (max-width: 1200px) {
-    .infor .cart .cart-products {
-        width: 35vw;
-        height: 36vh;
-    }
-}
-
-@media screen and (max-width: 1100px) {
-    .infor .cart .cart-products {
-        width: 38vw;
-        height: 36vh;
-    }
-}
-
-@media screen and (max-width: 1000px) {
-    .infor .cart .cart-products {
-        width: 40vw;
-        height: 36vh;
-    }
-}
-
-@media screen and (max-width: 900px) {
-    .infor .cart .cart-products {
-        width: 45vw;
-        height: 36vh;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .infor .cart .cart-products {
-        width: 50vw;
-        height: 36vh;
-    }
-}
-
-@media screen and (max-width: 700px) {
-    .infor .cart .cart-products {
-        width: 52vw;
-        height: 36vh;
-    }
-}
-
-@media screen and (max-width: 610px) {
-    .infor .cart .cart-products {
-        width: 62vw;
-        height: 36vh;
-    }
 }
 
 .cart-products img {
